// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LandingPage > rendrer innlogget side 1`] = `
<DocumentFragment>
  <div
    class="_landingPage_6ae597"
  >
    <div
      class="navds-stack navds-vstack"
      style="--__ac-stack-wrap: nowrap; --__ac-stack-gap-xs: var(--a-spacing-10); --__ac-stack-direction-xs: column;"
    >
      <section>
        <div
          class="navds-stack navds-vstack"
          style="--__ac-stack-wrap: nowrap; --__ac-stack-gap-xs: var(--a-spacing-2); --__ac-stack-direction-xs: column;"
        >
          <h2
            class="navds-heading navds-heading--medium"
          >
            landingsside.for.deg.foedt.foer.1963
          </h2>
          <p
            class="navds-body-long navds-body-long--medium"
          >
            landingsside.du.maa.bruke.detaljert
          </p>
          <div>
            <button
              class="navds-button navds-button--secondary navds-button--medium"
              data-testid="landingside-detaljert-kalkulator-button"
            >
              <span
                class="navds-label"
              >
                landingsside.button.detaljert_kalkulator
              </span>
            </button>
          </div>
        </div>
      </section>
      <section>
        <div
          class="navds-stack navds-vstack"
          style="--__ac-stack-wrap: nowrap; --__ac-stack-gap-xs: var(--a-spacing-4); --__ac-stack-direction-xs: column;"
        >
          <h2
            class="navds-heading navds-heading--medium"
          >
            landingsside.for.deg.foedt.etter.1963
          </h2>
          <p
            class="navds-body-long navds-body-long--medium"
          >
            landingsside.velge_mellom_detaljert_og_enkel
          </p>
          <div>
            <p
              class="navds-body-long navds-body-long--medium"
            >
              landingsside.velge_mellom_detaljert_og_enkel_2
            </p>
            <ul>
              <li>
                landingsside.liste.1
              </li>
              <li>
                landingsside.liste.2
              </li>
              <li>
                landingsside.liste.3
              </li>
              <li>
                landingsside.liste.4
              </li>
            </ul>
          </div>
          <div
            class="navds-stack navds-hstack"
            style="--__ac-stack-wrap: wrap; --__ac-stack-gap-xs: var(--a-spacing-4); --__ac-stack-direction-xs: row;"
          >
            <button
              class="navds-button navds-button--secondary navds-button--medium"
            >
              <span
                class="navds-label"
              >
                landingsside.button.detaljert_kalkulator
              </span>
            </button>
            <button
              class="navds-button navds-button--secondary navds-button--medium"
              data-testid="landingside-enkel-kalkulator-button"
            >
              <span
                class="navds-label"
              >
                landingsside.button.enkel_kalkulator
              </span>
            </button>
          </div>
        </div>
      </section>
      <a
        href=""
      >
        landingsside.link.personopplysninger
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LandingPage > rendrer utlogget side 1`] = `
<DocumentFragment>
  <div
    class="_landingPage_6ae597"
  >
    <div
      class="navds-stack navds-vstack"
      style="--__ac-stack-wrap: nowrap; --__ac-stack-gap-xs: var(--a-spacing-10); --__ac-stack-direction-xs: column;"
    >
      <section>
        <div
          class="navds-stack navds-vstack"
          style="--__ac-stack-wrap: nowrap; --__ac-stack-gap-xs: var(--a-spacing-2); --__ac-stack-direction-xs: column;"
        >
          <h2
            class="navds-heading navds-heading--medium"
          >
            landingsside.for.deg.foedt.foer.1963
          </h2>
          <p
            class="navds-body-long navds-body-long--medium"
          >
            landingsside.du.maa.bruke.detaljert
          </p>
          <div>
            <button
              class="navds-button navds-button--secondary navds-button--medium"
              data-testid="landingside-detaljert-kalkulator-button"
            >
              <span
                class="navds-label"
              >
                landingsside.button.detaljert_kalkulator_utlogget
              </span>
            </button>
          </div>
        </div>
      </section>
      <section>
        <div
          class="navds-stack navds-vstack"
          style="--__ac-stack-wrap: nowrap; --__ac-stack-gap-xs: var(--a-spacing-4); --__ac-stack-direction-xs: column;"
        >
          <h2
            class="navds-heading navds-heading--medium"
          >
            landingsside.for.deg.foedt.etter.1963
          </h2>
          <p
            class="navds-body-long navds-body-long--medium"
          >
            landingsside.velge_mellom_detaljert_og_enkel
          </p>
          <div>
            <p
              class="navds-body-long navds-body-long--medium"
            >
              landingsside.velge_mellom_detaljert_og_enkel_2
            </p>
            <ul>
              <li>
                landingsside.liste.1
              </li>
              <li>
                landingsside.liste.2
              </li>
              <li>
                landingsside.liste.3
              </li>
              <li>
                landingsside.liste.4
              </li>
            </ul>
          </div>
          <div
            class="navds-stack navds-hstack"
            style="--__ac-stack-wrap: wrap; --__ac-stack-gap-xs: var(--a-spacing-4); --__ac-stack-direction-xs: row;"
          >
            <button
              class="navds-button navds-button--secondary navds-button--medium"
            >
              <span
                class="navds-label"
              >
                landingsside.button.detaljert_kalkulator_utlogget
              </span>
            </button>
            <button
              class="navds-button navds-button--secondary navds-button--medium"
              data-testid="landingside-enkel-kalkulator-button"
            >
              <span
                class="navds-label"
              >
                landingsside.button.enkel_kalkulator_utlogget
              </span>
            </button>
          </div>
        </div>
      </section>
      <section>
        <div
          class="navds-stack navds-vstack"
          style="--__ac-stack-wrap: nowrap; --__ac-stack-gap-xs: var(--a-spacing-2); --__ac-stack-direction-xs: column;"
        >
          <h2
            class="navds-heading navds-heading--medium"
            data-testid="uinlogget-kalkulator"
          >
            landingsside.text.uinnlogget_kalkulator
          </h2>
          <p
            class="navds-body-long navds-body-long--medium"
          >
            landingsside.body.uinnlogget_kalkulator
          </p>
          <div>
            <button
              class="navds-button navds-button--secondary navds-button--medium"
              data-testid="landingside-enkel-kalkulator-button"
            >
              <span
                class="navds-label"
              >
                landingsside.text.uinnlogget_kalkulator
              </span>
            </button>
          </div>
        </div>
      </section>
      <a
        href=""
      >
        landingsside.link.personopplysninger
      </a>
    </div>
  </div>
</DocumentFragment>
`;
